fix background image error

--- a/LAB4/Server/Views/content/contact.ejs
+++ b/LAB4/Server/Views/content/contact.ejs
@@ -5,7 +5,7 @@
   <div class="card-body">
     
     
-      <p>Matt Enns email: <a title="Matthew Enns email at Durham College" href="mailto:matthew.enns@dcmail.ca" target="_blank">matthew.enns@dcmail.ca</a></p>
+      <p>Matthew Enns email: <a title="Matthew Enns email at Durham College" href="mailto:matthew.enns@dcmail.ca" target="_blank">matthew.enns@dcmail.ca</a></p>
 
       <p>David Nguyen email: <a title="David Nguyen's Email at Durham College" href="mailto:david.nguyen1@dcmail.ca" target="_blank">david.nguyen1@dcmail.ca</a></p>
    
